[metadata]
name = toyotaify
version = 0.0.1
author = Joseph Walker
author_email = joseph.walker.tmp@gmail.com
description = A tool to help your Toyota understand MP3s
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
